
Slick 7.x-2.0-dev, 2016-09-06
-----------------------------
- Changed RTL placement from content_attributes to attributes to allow
  correcting arrow placement which is placed outside slider.
- Allowed a few reasonable HTML tags within slide title.

Slick 7.x-2.0-dev, 2016-08-03
-----------------------------
- #2766399 by nmalinoski: CSS affects ALL images, not just Slick images.
- Removed unsed $media_widget.
- Added support for data-src iframe lazy.
- Fixed for regression with classes_array and attributes_array.

Slick 7.x-2.0-dev, 2016-07-14
-----------------------------
- #2764893 by PhilY: Error message when using Drupal 7.50.
- Fixed for edge case with EntityMalformedException: Missing bundle property.
- Fixed for broken unslick with the new unslick approach when caption and image
  are both present.

Slick 7.x-2.0-dev, 2016-06-20
-----------------------------
- Added lightbox caption option.

Slick 7.x-2.0-dev, 2016-06-19
-----------------------------
- Re-used form-elements for Slick fields and Slick views.
- Backported thumbnail_effect option as a replacement for thumbnail_hover.
- Allowed Slick to run at least the lazyload on an unslick.
- Fixed for unslick images.

Slick 7.x-2.0-dev, 2016-06-16
-----------------------------
- Fixed for the never-done-right slick_get_dimensions().
- Fixed for .media-icon--lightbox hover.
- Optimized slick_optionset_load() to not load from DB by default.
- Added Optimized option to optimize the storage of the Optionsets by excluding
  options similar to defaults.
- Merged slick.fields.inc contents into slick.global.inc to reduce one include.

Slick 7.x-2.0-dev, 2016-06-10
-----------------------------
- #2745803 by 3blake7: Undefined index: path in slick_fields_field_formatter_view().
- Added "Use CSS background" option to simplify the cumbersome "inline css"
  normally provided via hook_slick_skins_info(), and fully lazyloaded as well.
  Be sure to re-save the formatter and enable "Use CSS background" if previously